--- a/OrderService/appsettings.json
+++ b/OrderService/appsettings.json
@@ -8,9 +8,9 @@
   },
   "PostgresConfig": {
     "Host": "localhost",
-    "Port": 54320,
+    "Port": 5432,
     "User": "postgres",
-    "Password": "12345",
+    "Password": "Raja@1123",
     "Name": "OrderServices"
   },
   "AllowedHosts": "*"
